plugin/plugin.h

G_BEGIN_DECLS

int32_t plugin_instance_get_actual_width  (PluginInstance *instance);
int32_t plugin_instance_get_actual_height (PluginInstance *instance);
Surface *plugin_instance_get_surface (PluginInstance *instance);
char *plugin_instance_get_init_params  (PluginInstance *instance);
char *plugin_instance_get_source  (PluginInstance *instance);
char *plugin_instance_get_source_location  (PluginInstance *instance);
char *plugin_instance_get_id (PluginInstance *instance);
NPObject *plugin_instance_get_host (PluginInstance *instance);
void plugin_instance_get_browser_information (PluginInstance *instance,
					      char **name, char **version,
					      char **platform, char **userAgent,
					      bool *cookieEnabled);
void plugin_instance_report_exception (PluginInstance *instance, char *msg, char *details, char **stack_trace, int num_frames);
void *plugin_instance_evaluate (PluginInstance *instance, const char *code);