src/downloader.h

class Downloader;
class DownloaderRequest;
typedef uint32_t (* DownloaderResponseStartedHandler) (DownloaderResponse *response, gpointer context);
typedef uint32_t (* DownloaderResponseDataAvailableHandler) (DownloaderResponse *response, gpointer context, char *buffer, uint32_t length);
typedef uint32_t (* DownloaderResponseFinishedHandler) (DownloaderResponse *response, gpointer context, bool success, gpointer data);
typedef void (*DownloaderResponseHeaderVisitorCallback) (const char *header, const char *value);
void  downloader_abort	       (Downloader *dl);
char *downloader_get_response_text   (Downloader *dl, const char *PartName, guint64 *size);
//void  downloader_open		(Downloader *dl, const char *verb, const char *uri);
void  downloader_send		(Downloader *dl);
void *downloader_create_webrequest (Downloader *dl, const char *method, const char *uri);
void downloader_request_abort (DownloaderRequest *dr);
bool downloader_request_get_response (DownloaderRequest *dr, DownloaderResponseStartedHandler started, DownloaderResponseDataAvailableHandler available, DownloaderResponseFinishedHandler finished, gpointer context);
bool downloader_request_is_aborted (DownloaderRequest *dr);
void downloader_request_set_http_header (DownloaderRequest *dr, const char *name, const char *value);
void downloader_request_set_body (DownloaderRequest *dr, void *body, int size);
void downloader_response_set_header_visitor (DownloaderResponse *dr, DownloaderResponseHeaderVisitorCallback visitor);