src/xaml.h

typedef bool (*xaml_lookup_object_callback) (void *parser, void *top_level, const char *xmlns, const char *name, bool create, Value *value);
typedef void (*xaml_create_gchandle_callback) ();
typedef bool (*xaml_set_property_callback) (void *parser, void *top_level, const char* xmlns, Value *target, void *target_data, void *target_parent, const char *name, Value *value, void *value_data);
typedef void (*xaml_import_xaml_xmlns_callback) (void *parser, const char* xmlns);
typedef const char* (*xaml_get_content_property_name_callback) (void *parser, Type::Kind kind);
struct XamlLoaderCallbacks {
	xaml_lookup_object_callback lookup_object;
	xaml_create_gchandle_callback create_gchandle;
	xaml_set_property_callback set_property;
	xaml_import_xaml_xmlns_callback import_xaml_xmlns;
	xaml_get_content_property_name_callback get_content_property_name;

	XamlLoaderCallbacks () :
		lookup_object (NULL),
		set_property (NULL),
		import_xaml_xmlns (NULL),
		get_content_property_name (NULL)
	{
	}
};
bool        xaml_set_property_from_str (DependencyObject *obj, DependencyProperty *prop, const char *value);
bool        value_from_str_with_typename (const char *type_name, const char *prop_name, const char *str, Value **v);
XamlLoader *xaml_loader_new (const char *filename, const char *str, Surface *surface);
void	    xaml_loader_free (XamlLoader *loader);
void        xaml_loader_set_callbacks (XamlLoader *loader, XamlLoaderCallbacks callbacks);
char*       xaml_uri_for_prefix (void *parser, char* prefix);